Fixed spacing between circles on home screen

--- a/frontend/src/components/home/homeStyle.css
+++ b/frontend/src/components/home/homeStyle.css
@@ -43,19 +43,18 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .Left{
-  margin-left: 50px;
-  margin-right: 20px;
+  width: 400px;
+  margin-left: 200px;
   text-align: center;
 }
 
 .Right{
-  margin-left: 20px;
-  margin-right: 50px;
-  word-wrap: break-word;
+  width: 500px;
+  margin-right: 200px;
   text-align: center;
 }
 
@@ -103,7 +102,7 @@
 
 @media (min-width: 1200px){
   .correctCircle{
-    margin-right: 500px;
+    margin-right: 450px;
   }
 }
 
@@ -118,4 +117,9 @@
 .success {
   text-align: center;
   font-size: 20px;
+}
+
+.noBottomMargin {
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
