--- a/frontend/src/components/home/popup.css
+++ b/frontend/src/components/home/popup.css
@@ -113,7 +113,3 @@
     height:10px;
   }
 }
-
-.noBottomMargin {
-  margin-bottom: 0px;
-}
